# peaker

./: .gitignore  CHANGES.rst  README.md  README.rst  conftest.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml  tests.yml
docs/: conf.py  index.rst
docs/peaker/: description.rst
peaker/: get_artifacts.py  parse_xmls.py  pdf_utils.py  peaker.py  plotting.py  table_utils.py  utils.py
peaker/tests/: conftest.py  test_parse_xmls.py  test_pdf_utils.py  test_plotting.py  test_table_utils.py  test_utils.py
peaker/tests/Data/jwst/peaker_outputs/: JWST_Regression_Tests_Memory_Peaks_from_2026-03-25_to_2026-04-13.csv
peaker/tests/Data/jwst/xmls/: results-jwst-1.20.0rc1-281-gc55b5abb3-Linux-X64-py3.12-3699.xml  results-jwst-1.20.0rc1-285-g79f688789-Linux-X64-py3.12-3704.xml  results-jwst-1.20.0rc1-289-g0aa3d848e-Linux-X64-py3.12-3797.xml  results-jwst-1.20.0rc1-294-g7dd2565c8-Linux-X64-py3.12-3808.xml  results-jwst-1.20.0rc1-298-g2974f2f4c-Linux-X64-py3.12-3810.xml  results-jwst-1.20.0rc1-301-gb52070e27-Linux-X64-py3.12-3814.xml  results-jwst-1.20.0rc1-301-gb52070e27-Linux-X64-py3.12-3816.xml  results-jwst-1.20.0rc1-301-gb52070e27-Linux-X64-py3.12-3817.xml  results-jwst-1.20.0rc1-305-g167ed25a6-Linux-X64-py3.12-3827.xml  results-jwst-1.20.0rc1-305-g167ed25a6-Linux-X64-py3.12-3867.xml  results-jwst-1.20.0rc1-312-gd10b6623d-Linux-X64-py3.12-3890.xml  results-jwst-1.20.0rc1-314-g61bd2fe47-Linux-X64-py3.12-3901.xml  results-jwst-1.20.0rc1-314-g61bd2fe47-Linux-X64-py3.12-3904.xml  results-jwst-1.20.0rc1-314-g61bd2fe47-Linux-X64-py3.12-3905.xml  results-jwst-1.20.0rc1-314-g61bd2fe47-Linux-X64-py3.12-3906.xml
src/peaker/: __init__.py  get_artifacts.py  parse_xmls.py  peaker.py
tests/: test_get_artifacts.py  test_pdf_utils.py
