[project]
name = "peaker"
description = "My pretty cool package"
requires-python = ">=3.7"
authors = [
    { name = "STScI" },
]
keywords = [
    "astronomy",
    "astrophysics",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.17",
    "astropy>=4",
    "matplotlib",
]
dynamic = [
    "version",
]
edit-on-github = "False"
github-project = "spacetelescope/peaker"

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.license]
file = "LICENSE.rst"
content-type = "text/plain"

[project.urls]
Homepage = "https://github.com/spacetelescope/peaker"

[project.optional-dependencies]
test = [
    "pytest-astropy-header",
    "pytest-doctestplus",
]
docs = [
    "sphinx-automodapi",
    "stsci_rtd_theme",
]

[build-system]
requires = [
    "setuptools",
    "setuptools_scm",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false
include-package-data = false
license-files = [
    "LICENSE.rst",
]

[tool.setuptools.packages.find]
namespaces = false

[tool.setuptools.package-data]
peaker = [
    "data/*",
]

[tool.entry_points]
peaker = "peaker.peaker:main"

[tool.pytest.ini_options]
minversion = "5.0"
norecursedirs = [
    "build",
    "docs/_build",
]
astropy_header = true
doctest_plus = "enabled"

[tool.flake8]
max-line-length = 79

[tool.coverage.run]
source = [
    "peaker",
]
omit = [
    "peaker/tests/*",
    "peaker/version*",
    "*/peaker/tests/*",
    "*/peaker/version*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "except ImportError",
    "raise AssertionError",
    "raise NotImplementedError",
    "def main\\(.*\\):",
    "pragma: py{ignore_python_version}",
    "def _ipython_key_completions_",
]
