[metadata]
name = peaker
description = Create PDF report regression tests memory peaks
long_description = This package is designed to provide a report that shows the state of the current memory usage of the calibration pipeline, and help set the programming goals for future builds.
long_description_content_type = text/plain
keywords = junit, peak, memory, report
author = STScI
license = BSD
license_file = LICENSE.rst
url = https://github.com/spacetelescope/peaker
edit_on_github = False
github_project = spacetelescope/speaker
classifiers =
    Intended Audience :: Topic :: Utilities
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = peaker
zip_safe = False
setup_requires =
    setuptools_scm
install_requires =
    numpy>=1.17
    matplotlib
    astropy>=4
    fpdf2>=2.8.6
    PyArtifactory>=2.11.2
python_requires = >=3.10

[options.extras_require]
test =
    pytest-astropy-header
    pytest-doctestplus
docs =
    sphinx-automodapi
    stsci_rtd_theme

[options.package_data]
peaker = data/*

[options.entry_points]
console_scripts=
    peaker = peaker.peaker:main

[tool:pytest]
minversion = 5.0
norecursedirs = build docs/_build
astropy_header = True
doctest_plus = enabled

[flake8]
max-line-length = 79

[coverage:run]
source = peaker
omit =
    peaker/tests/*
    peaker/version*
    */peaker/tests/*
    */peaker/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
